src/objects/Routing_Configuration__c.object
<CustomObject>
    <description>Object to store routing configuration records for system auto routing cases to queues</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Notes/comments field related to this routing configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <description>Describes the current value of the queue, so that the system can pick the correct queue for routing</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <description>To allow routing engine to look at same field on Case and route it to appropriate restricted/non-restricted Queues</description>
        <label>Onshore Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Provider_Region__c</fullName>
        <label>Provider Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                    <isActive>false</isActive>
                    <label>Leased</label>
                </value>
                <value>
                    <fullName>National</fullName>
                    <isActive>false</isActive>
                    <label>National</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Routing__c</fullName>
        <label>Priority Routing</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                    <isActive>false</isActive>
                    <label>Escalated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Used to capture queue name case will be routed to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutingConfigurationExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RoutingConfigurationExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <description>Used to route to more urgent queues.  Example:  Platinum Providers have their cases routed to special queues.  Platinum Providers will have a code which is populated on the case at case creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTS_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TTS Access</label>
        <referenceTo>TTS_Access__c</referenceTo>
        <relationshipLabel>Routing Configuration</relationshipLabel>
        <relationshipName>Routing_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TTS_ExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TTS_ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic1__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <label>UHG Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Routing Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>SortOrder__c</columns>
        <columns>IsActive__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Status__c</columns>
        <columns>ServiceLevel__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Records_all_fields</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>ProfileName__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Status__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>IsActive__c</columns>
        <columns>RoleName__c</columns>
        <columns>ServiceLevel__c</columns>
        <columns>RoutingConfigurationExternalID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records (all fields)</label>
    </listViews>
    <listViews>
        <fullName>Bob</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Bob</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Records</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Status__c</columns>
        <columns>ProfileName__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority_Routing__c</columns>
        <columns>CurrentQueue__c</columns>
        <columns>SortOrder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Records</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Routing Configuration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ECM_CaseOwnerandCurrentQueueVR</fullName>
        <active>true</active>
        <description>Ensures that whenever the Current Queue is populated Profile Name AND/OR Role Name are blank. (And vice versa - whenever Profile Name AND/OR Role Name are populated, Current queue should be blank)</description>
        <errorConditionFormula>NOT( ISBLANK(CurrentQueue__c) )  &amp;&amp; ( NOT( ISBLANK(ProfileName__c) ) || NOT( ISBLANK(RoleName__c) ))</errorConditionFormula>
        <errorMessage>When creating Queue to Queue routing the Profile Name and Role Name must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_PriorityRoutingAndCurrentQueueVR</fullName>
        <active>true</active>
        <description>Ensures that whenever the Current Queue is populated Priority Routing Checkbox is blank. And vice versa - whenever the Priority Routing checkbox is checked the Current Queue needs to be blank</description>
        <errorConditionFormula>NOT(ISBLANK(CurrentQueue__c)) &amp;&amp; 
( (ISPICKVAL(Priority_Routing__c , &quot;No&quot;)) || 
  (ISBLANK(TEXT(Priority_Routing__c))) )</errorConditionFormula>
        <errorMessage>When creating Queue to Queue routing the Priority Routing field must be Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_TopicAndCurrentQueueVR</fullName>
        <active>true</active>
        <description>Ensures that whenever the Current Queue is populated the &apos;Topic&apos; field is blank. And vice versa - Ensures that whenever the Topic is populated the Current Queue field is blank</description>
        <errorConditionFormula>NOT( ISBLANK(CurrentQueue__c) ) &amp;&amp;  NOT(ISBLANK( TEXT(Topic1__c )))</errorConditionFormula>
        <errorMessage>When creating Queue to Queue routing Topic must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_updating_Topic_Type_Subtype</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISCHANGED(Type__c) || ISCHANGED(Subtype__c) || ISCHANGED(Topic1__c),true,false)</errorConditionFormula>
        <errorMessage>Topic, Type and Subtype fields cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>